@@ -13,6 +13,12 @@
 #
 #---------------------------------------------
 
+examples()
+{
+cat << _EXAMPLES
+_EXAMPLES
+}
+
 usage()
 {
 cat << _USAGE
